Initial project structure with layered architecture Add DbContext, Employee and Department entities

--- a/HRManagementSystem/appsettings.json
+++ b/HRManagementSystem/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=HRSystemDB;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+
   "AllowedHosts": "*"
+
+
 }
+
