- DB: add initial EF Core migration and apply database schema - Tables : (Employee, Department, User, Role, Attendance, Contract)

--- a/HRManagementSystem/appsettings.json
+++ b/HRManagementSystem/appsettings.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=HRSystemDB;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=MT\\SQLEXPRESS;Database=HRManagementSystemDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
 
   "AllowedHosts": "*"
