--- a/HRManagementSystem/appsettings.json
+++ b/HRManagementSystem/appsettings.json
@@ -9,6 +9,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=MT\\SQLEXPRESS;Database=HRManagementSystemDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
+  "Jwt": {
+    "Key": "TESTTTTTTTTTTTTTTESTTTTTTTTTTTTTTTTTTTTTT",
+    "Issuer": "HRSystem.com",
+    "Audience": "HRSystemUsers"
+  },
 
   "AllowedHosts": "*"
 
