--- a/HRManagementSystem/HRManagementSystem.Web.csproj
+++ b/HRManagementSystem/HRManagementSystem.Web.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\HRManagementSystem.Services\HRManagementSystem.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.22" />
+  </ItemGroup>
+
 </Project>
